# mongodb-example

./: Cargo.toml  cfg.toml.example  diagram.json  wokwi.toml
.devcontainer/: devcontainer.json
.github/workflows /: ci.yaml
chips/: shtc3.chip.wasm
docs/: README.md
scripts/: flash.sh
src/: main.rs
