[package]
name = "mongodb"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0.70"
embedded-svc = "0.24.0"
esp-idf-hal = "0.40.1"
esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
log = "0.4.17"
serde_json = "1.0.96"
shared-bus = "0.2.5"
shtcx = "0.11.0"
toml-cfg = "0.1.3"

[build-dependencies]
embuild = "0.31.1"
